<rdar://problem/7308952> and http://webkit.org/b/30424 - REGRESSION (r48687): Pages on ucas.com appear blank.

Reviewed by Darin Adler.

WebCore:

Test: fast/loader/history-forward-in-head.html

* loader/RedirectScheduler.cpp:
(WebCore::RedirectScheduler::scheduleHistoryNavigation): Restore the moved canGoBackOrForward() check.
  This restores the side effect of an invalid history navigation canceling previous scheduled redirects
  and also fixes the bug of scheduling an invalid history navigation canceling parsing of the current document.
(WebCore::RedirectScheduler::timerFired): Removed the canGoBackOrForward() check as it is now made before
  the redirect is scheduled.

LayoutTests:

* fast/loader/history-forward-in-head-expected.txt: Added.
* fast/loader/history-forward-in-head.html: Added.



Canonical link: https://commits.webkit.org/41557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50111 268f45cc-cd09-0410-ab3c-d52691b4dbfc